# AlphaESS

./: .gitignore  CMakeLists.txt  README.md  mbedtls_config.h
3D-Models/: BlindCover.ipt  DisplayMountv4.stp
libraries/: CMakeLists.txt
port/: CMakeLists.txt
src/: AlphaESS.c  alphaESS.h  httpClient.c  main.c
